@@ -18,7 +18,7 @@ Scripts.  It can be accessed from Python with the statement
 "import Products.PythonScripts.standard"
 """
 
-__version__='$Revision: 1.9 $'[11:-2]
+__version__='$Revision: 1.10 $'[11:-2]
 
 from AccessControl import ModuleSecurityInfo, getSecurityManager
 security = ModuleSecurityInfo()
@@ -28,11 +28,12 @@ security.declarePublic('special_formats', 'whole_dollars',
                        'sql_quote', 'html_quote', 'url_quote',
                        'url_quote_plus', 'newline_to_br',
                        'thousands_commas', 'url_unquote',
-                       'url_unquote_plus')
+                       'url_unquote_plus', 'urlencode')
 from DocumentTemplate.DT_Var import special_formats, \
  whole_dollars, dollars_and_cents, structured_text, sql_quote, \
  html_quote, url_quote, url_quote_plus, newline_to_br, thousands_commas, \
  url_unquote, url_unquote_plus
+from urllib import urlencode
 
 from Globals import HTML
 from AccessControl.DTML import RestrictedDTML
